--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -1,27 +1,23 @@
 name: Docker Release
 
 on:
+  workflow_dispatch:
   release:
     types: [created]
 
 jobs:
-  build-and-push:
+  publish-hello-docker-image:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
+      - uses: actions/checkout@v2
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GHCR_TOKEN }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ghcr.io/${{ github.repository_owner }}/my-image:${{ github.event.release.tag_name }}
-          
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build the hello-docker Docker image
+        run: |
+           docker build . --tag ghcr.io/tilation/hello-docker-gcr-demo:latest
+           docker run ghcr.io/tilation/hello-docker-gcr-demo:latest
+           docker push ghcr.io/tilation/hello-docker-gcr-demo:latest
